--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 body{
     padding: 0;
     margin: 0;
@@ -98,6 +96,23 @@ img {
     font-size: 14px;
 }
 
+/* Negrita al navbar */
+.nav-link {
+    font-weight: bold;
+}
+
+.carousel-inner {
+    height: 360px;
+    /* Ajusta la altura del carrusel según tus necesidades */
+}
+
+.carousel-item img {
+    max-height: 100%;
+    /* Asegura que las imágenes se ajusten a la altura del carrusel */
+    object-fit: contain;
+    /* Mantiene la relación de aspecto de las imágenes */
+}
+
 
 /* Cards */
 
@@ -130,6 +145,7 @@ h2 {
 }
 
 .card-img-top {
+    width: 250px;
     height: 200px;
     object-fit: cover;
 }
@@ -170,9 +186,16 @@ h2 {
     margin: 0 auto;
 }
 
-.g-4 {
+/* .g-4 {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 1.5rem;
+} */
+
+
+/* Configuracion del Footer */
+
+footer {
+    background-color: #30393a;
 }
 
 .container_footer {
@@ -187,13 +210,38 @@ ul , li,  a {
     text-decoration: none;
     list-style: none;
     color: #fff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
 }
+
+.img_footer_whastapp {
+    width: 300px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.img_banner {
+    width: 400px;
+    height: 60px;
+    margin: 5px auto;
+
+}
+
+.social {
+    margin: 3px 0 0 50px;
+}
+
 
 footer .copyright {
     text-align: center;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 5px;
     font-size: 14px;
+
 }
 
 footer .copyright a {
@@ -206,9 +254,94 @@ footer .copyright a:hover {
 
 }
 
+.copyright {
+    padding: 5px;
+    height: 40px;
+    color: #fff;
+}
+
+
+
 /* Responsive */
 @media (max-width: 768px) {
+    
+    .container_header {
+        margin: 0 auto;
+    }
+
+    .carousel-inner {
+        height: 240px; /* Ajusta la altura del carrusel según tus necesidades */
+      }
+
+    img {
+        width: 200px;
+        height: 100px;
+        padding: 10px;
+    }
+
+    .buscador {
+        /* padding: 0 4px;
+        height: 36px;
+        width: 230px;
+        border: 3px solid #125cb7;
+        border-radius: 5px; */
+        padding: 0;
+        width: 200px;
+        
+    }
+
     .col-md-3 {
         margin-bottom: 1.5rem;
     }
 }
+
+/* Default styles for larger screens */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  
+  /* Media query for smaller screens */
+  @media (max-width: 768px) {
+    .col-md-3 {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
+
+
+
+
+  
+  /* Media query for extra small screens */
+  @media (max-width: 576px) {
+    .col-md-3 {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+  
+    /* Adjust other styles for mobile */
+    .header {
+      padding: 10px;
+    }
+  
+    .logo {
+      max-width: 150px;
+    }
+  
+    .nav-item {
+      font-size: 14px;
+      padding: 8px;
+    }
+  }
